--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,11 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>github Packages</name>
+      <url>https://maven.pkg.github.com/NithyaGowri/maven-project</url>
+    </repository>
+  </distributionManagement>
 </project>
